# GIT-RAG

./: .gitignore  README.es.md  README.md  docker-compose.yml
API/: .env.db.example  .env.example  Dockerfile  docker-compose.postgres.yml  pyproject.toml  readme.md  requirements.txt
API/app/: main.py
API/app/api/: deps.py
API/app/api/routes/: evaluate.py  evaluations.py  ingest.py  metrics.py  rag.py
API/app/core/: config.py  database.py
API/app/data/indexes/: artifacts_manifest.json  faiss.index
API/app/data/processed/: embeddings.npy  processed_chunks.json
API/app/data/raw/: corporate_policy_uploaded_rag.json
API/app/models/: ingest_models.py  observability_models.py  rag_models.py
API/app/schemas/: evaluation.py  evaluations.py  ingest.py  metrics.py  rag.py
API/app/services/evaluation/: metrics.py  service.py
API/app/services/ingest/: chunker.py  deduplicator.py  loader.py  normalizer.py  parser.py  pipeline.py  policy_pdf.py  writer.py
API/app/services/observability/: query_service.py  repository.py
API/app/services/rag/: embedder.py  pipeline.py  query_service.py  retriever.py  vector_index.py
API/app/services/rag/generator/: base.py  local_generator.py  openai_generator.py
API/app/state/: rag_state.py
API/migrations/: 001_initial_observability.sql  002_add_hit_ndcg.sql
API/scripts/: benchmark_rag_vs_base.py  questions.labeled.sample.jsonl  questions.sample.jsonl
UI/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.mjs
UI/scripts/: vite-runner.mjs
(+31 files in other folders)
